--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,41 @@
   color: inherit;
   margin: 0;
 }
+
+body {
+  font-family: "Manrope", sans-serif;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+ .navbar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+
+.navbar {
+  padding: 0.75rem 1.5rem;
+  box-shadow: 1px 3px 5px rgba(5, 0, 0, 0.1);
+}
+
+.br {
+  border-radius: 20px;
+}
