--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,21 @@ img {
   max-width: 100%;
 }
 
- .navbar {
+.logo {
+  position: relative;
+  height: 50px;
+  width: 50px;
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
+.navbar .container, .navbar {
   width: 100%;
   display: flex;
   align-items: center;
@@ -37,6 +51,18 @@ img {
   box-shadow: 1px 3px 5px rgba(5, 0, 0, 0.1);
 }
 
+.ml-1 {
+  margin-left: 0.75rem;
+}
+
 .br {
   border-radius: 20px;
+}
+
+.br-full {
+  border-radius: 50%;
+}
+
+.display-f {
+  display: flex;
 }
