--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,60 @@ img {
   box-sizing: border-box;
 }
 
+.row {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.text-primary {
+  color: #0d1c47;
+}
+
+.text-hover-primary:hover {
+  color: #0d1c47;
+}
+
+.text-secondary {
+  color: #00B4D8;
+}
+
+.text-hover-secondary:hover {
+  color: #00B4D8;
+}
+
+.text-gray {
+  color: gray;
+}
+
+.bg-gray-light-9 {
+  background-color: rgb(242.3, 242.3, 242.3);
+}
+
+.text-white {
+  color: white;
+}
+
+.bg-white {
+  background-color: white;
+}
+
+.btn-secondary {
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-block;
+  border: 0;
+  padding: 0.75rem 1.5rem;
+  border-radius: 20px;
+  background-color: #00B4D8;
+}
+.btn-secondary:hover {
+  background-color: rgb(0, 192.25, 230.7);
+}
+
 .navbar .container, .navbar {
   width: 100%;
   display: flex;
@@ -51,8 +105,28 @@ img {
   box-shadow: 1px 3px 5px rgba(5, 0, 0, 0.1);
 }
 
+.pt-5 {
+  padding-top: 6rem;
+}
+
+.pb-5 {
+  padding-bottom: 6rem;
+}
+
 .ml-1 {
   margin-left: 0.75rem;
+}
+
+.ml-2 {
+  margin-left: 1.5rem;
+}
+
+.mt-2 {
+  margin-top: 1.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
 }
 
 .br {
@@ -65,4 +139,12 @@ img {
 
 .display-f {
   display: flex;
+}
+
+.position-f {
+  position: fixed;
+}
+
+.font-xxl {
+  font-size: 3em;
 }
